[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
librevault_util = { path = "../util" }
common-rs = { path = "../common-rs" }
clap = { version = "3.1.3", features = ["derive"] }
tokio = { version = "1.13.0", features = ["rt", "macros", "rt-multi-thread", "fs", "sync", "net", "signal"] }
tonic = "0.6.1"
prost = "0.9.0"
hex = "0.4.3"
url = "2.2.2"
log = "0.4.14"
env_logger = "0.9.0"
walkdir = "2"

[build-dependencies]
tonic-build = "0.6.0"
