[package]
name = "daemon-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
librevault_util = { path = "../util" }
figment = { version = "0.10.6", features = ["toml"] }
serde = { version = "1", features = ["derive"] }
directories = "4.0.1"
tokio = { version = "1.15.0", features = ["rt", "macros", "rt-multi-thread", "fs", "sync", "net", "signal"] }
#igd = { version = "0.12.0", features = ["aio"] }
#hex = "0.4.3"
libp2p = { version = "0.41.1", features = ["tcp-tokio", "gossipsub", "mplex", "yamux", "noise", "mdns"], default-features = false }
librevault-core = {path= "../librevault-core" }
prost = "0.9.0"
notify = "4.0.16"
futures = "0.3.19"
tiny-tokio-actor = "0.3"
async-trait = "0.1"

tracing = "0.1"
tracing-subscriber = "0.3"
console-subscriber = "0.1"
