[package]
name = "daemon-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
librevault_util = { path = "../util" }
figment = { version = "0.10.6", features = ["toml"] }
serde = { version = "1", features = ["derive"] }
directories = "4.0.1"
tokio = { version = "1.23.0", features = ["rt", "macros", "rt-multi-thread", "fs", "sync", "net", "signal", "tracing"] }
libp2p = { version = "0.51.0", features = ["tcp", "tokio", "gossipsub", "mplex", "yamux", "noise", "mdns", "kad", "identify", "request-response", "macros", "tls"], default-features = false }
#librevault-core = {path= "../librevault-core" }
prost = "0.11.3"
notify = "5.0.0"
futures = "0.3.19"
actix = "0.13.0"
walkdir = "2.3.2"

tracing = "0.1"
tracing-subscriber = "0.3"
